add auto-create or disabled flag oidc users
